--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -17,13 +17,13 @@
         <ul *ngIf="signedIn$.getValue()?.employee.profile === 'Empleado'" 
         class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active">Inicio</a>
+            <a  href="employees"  class="nav-link active">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Viaticos</a>
+            <a href="employees/commissions" class="nav-link">Solicitudes de Viaticos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Solicitudes</a>
+            <a href="employees/commissions" class="nav-link">Comprobantes</a>
           </li>
         </ul>
       </div>
