--- a/Frontend/src/app/employees/employees-home/employees-home.component.html
+++ b/Frontend/src/app/employees/employees-home/employees-home.component.html
@@ -1,8 +1,8 @@
-<main>
+<main>  
   <div class="container">
     <div class="row justify-content-center">
-      <h2 class="display-5 mt-5">Empleados</h2>
+      <h2 class="display-5 mt-5 mb-4">Empleados</h2>
     </div>
-    <p>Actualmente no tienes ningun viatico activo.</p>
+    <p>Bienvenido empleado</p>
   </div>
 </main>
