--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="signedIn$.getValue()?.isAuthenticated">
   <nav class="navbar navbar-expand-lg navbar navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand">Viaticos</a>
+      <a class="navbar-brand" href="#">Viaticos y Transporte</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -14,19 +14,25 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
-        <ul *ngIf="signedIn$.getValue()?.employee.profile === 'Empleado'" 
-        class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul
+          *ngIf="signedIn$.getValue()?.employee.profile === 'Empleado'"
+          class="navbar-nav me-auto mb-2 mb-lg-0"
+        >
           <li class="nav-item">
-            <a  href="employees"  class="nav-link active">Inicio</a>
+            <a href="employees" class="nav-link">Inicio</a>
           </li>
           <li class="nav-item">
-            <a href="employees/commissions" class="nav-link">Solicitudes de Viaticos</a>
-          </li>
-          <li class="nav-item">
-            <a href="employees/commissions" class="nav-link">Comprobantes</a>
+            <a href="employees/commissions" class="nav-link">Comisiones</a>
           </li>
         </ul>
+        <span class="btn btn-sm disabled">
+          <i class="fa fa-user"></i>
+        </span>
+        <span class="navbar-text me-3">
+          {{ signedIn$.getValue()?.employee.name }}
+        </span>
       </div>
+
       <button routerLink="/signout" class="btn btn-outline-secondary">
         Cerrar sesión
       </button>
