--- a/Frontend/src/app/employees/employees-home/employees-home.component.html
+++ b/Frontend/src/app/employees/employees-home/employees-home.component.html
@@ -1,8 +1,7 @@
-<main>  
-  <div class="container">
-    <div class="row justify-content-center">
-      <h2 class="display-5 mt-5 mb-4">Empleados</h2>
-    </div>
-    <p>Bienvenido empleado</p>
+<main>
+  <div class="p-2 p-md-4">
+    <h1 class="display-4">Empleados</h1>
+    <p>Bienvenido al sistema empleado</p>
   </div>
+  <div class="container"></div>
 </main>
