--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="signedIn$.getValue()?.isAuthenticated">
-  <nav class="navbar navbar-expand-lg navbar navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-red">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Viaticos y Transporte</a>
       <button
@@ -25,7 +25,7 @@
             <a href="employees/commissions" class="nav-link">Comisiones</a>
           </li>
         </ul>
-        <span class="btn btn-sm disabled">
+        <span class="btn btn-user btn-sm disabled">
           <i class="fa fa-user"></i>
         </span>
         <span class="navbar-text me-3">
@@ -33,7 +33,7 @@
         </span>
       </div>
 
-      <button routerLink="/signout" class="btn btn-outline-secondary">
+      <button routerLink="/signout" class="btn btn-red">
         Cerrar sesión
       </button>
     </div>
