--- a/Frontend/src/app/auth/signin/signin.component.html
+++ b/Frontend/src/app/auth/signin/signin.component.html
@@ -70,7 +70,7 @@
               </div>
               <div class="form-group row">
                 <div class="col-md-5 col-lg-4 offset-md-5 offset-lg-4">
-                  <button type="submit" class="btn btn-outline-primary">
+                  <button type="submit" class="btn btn-outline-red">
                     Ingresar
                   </button>
                 </div>
