--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="signedIn$.getValue()?.isAuthenticated">
   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-red">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Viaticos y Transporte</a>
+      <a class="navbar-brand" href="#">Viáticos y Transporte</a>
       <button
         class="navbar-toggler"
         type="button"
