--- a/Frontend/src/app/employees/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/employees/commissions-index/commissions-index.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="p-2 p-md-4">
-    <h1 class="display-4">Comisiones</h1>
+    <h1 class="display-5">Comisiones</h1>
   </div>
   <div class="container">
     <button
@@ -12,11 +12,11 @@
       Solicitar comisión
     </button>
     <div class="card mt-4 mb-4">
-      <div class="card-header">
-        <h2 class="h4">Comisiones realizadas</h2>
+      <div class="card-header card-header-main">
+        <h2 class="h5">Comisiones solicitadas</h2>
       </div>
       <div class="card-body">
-        <div class="table-responsive mb-4">
+        <div class="table-responsive">
           <table class="table table-hover">
             <thead>
               <tr>
@@ -43,7 +43,7 @@
                   <button
                     [ngClass]="
                       commission.isApproved
-                        ? 'btn-outline-primary'
+                        ? 'btn-outline-secondary'
                         : 'disabled btn-outline-secondary'
                     "
                     class="btn btn-sm"
