--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -20,12 +20,14 @@
 }
 
 .card-header {
-  background-color: #6c2343 !important;
+  border-color: #6C2343;
+  background-color: #6c2343;
   color: white;
 }
 
 .card-header-main {
-  border-color: #6c2343 !important;
-  color: white;
+  background-color: white;
+  border-color: #6C2343;
+  color: black;
 }
 
