--- a/Frontend/src/app/manager/manager-home/manager-home.component.html
+++ b/Frontend/src/app/manager/manager-home/manager-home.component.html
@@ -1,8 +1,2 @@
-<main>
-  <div class="container">
-    <div class="row justify-content-center">
-      <h2 class="display-5 mt-5">Lider de Area</h2>
-    </div>
-    <p>Actualmente no hay solicitudes de por aprobar.</p>
-  </div>
-</main>
+<h1 class="display-5">Área de {{manager?.department}}</h1>
+<h2 class="h5 mt-4">Bienvenido al sistema de comisiones {{manager?.name}}</h2>
