--- a/Frontend/src/app/auth/signin/signin.component.html
+++ b/Frontend/src/app/auth/signin/signin.component.html
@@ -1,7 +1,7 @@
 <main class="login-form">
-  <div class="cotainer">
+  <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-9 col-lg-5">
+      <div class="col-md-9 col-lg-7 col-xl-6">
         <div class="card">
           <div class="card-header">Ingresar al Sistema</div>
           <div class="card-body">
