--- a/Frontend/src/app/employees/employees-home/employees-home.component.html
+++ b/Frontend/src/app/employees/employees-home/employees-home.component.html
@@ -1,7 +1,4 @@
-<main>
-  <div class="p-2 p-md-4">
-    <h1 class="display-5">Empleados</h1>
-    <p>Bienvenido al sistema empleado</p>
-  </div>
-  <div class="container"></div>
-</main>
+<h1 class="display-5">Empleado</h1>
+<h2 class="h5 mt-4">
+  Bienvenido al sistema de comisiones {{ employee?.name }}
+</h2>
