Funcionalidad de aprobación de solicitudes por el Jefe de Area agregada

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -36,11 +36,26 @@
             <a href="manager/commissions" class="nav-link">Solicitudes</a>
           </li>
         </ul>
+        <ul
+          *ngIf="signedIn$.getValue()?.employee.profile === 'Finanzas'"
+          class="navbar-nav me-auto mb-2 mb-lg-0"
+        >
+          <li class="nav-item">
+            <a href="finances" class="nav-link">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a href="finances/departments" class="nav-link">Departamentos</a>
+          </li>
+        </ul>
         <span class="btn btn-user btn-sm disabled">
           <i class="fa fa-user"></i>
         </span>
         <span class="navbar-text me-3">
-          {{ signedIn$.getValue()?.employee.name }}
+          {{
+            signedIn$.getValue()?.employee.name +
+              " - Área de " +
+              signedIn$.getValue()?.employee.department
+          }}
         </span>
       </div>
 
