--- a/Frontend/src/app/finances/finances-home/finances-home.component.html
+++ b/Frontend/src/app/finances/finances-home/finances-home.component.html
@@ -1,8 +1,4 @@
-<main>
-    <div class="container">
-      <div class="row justify-content-center">
-        <h2 class="display-5 mt-5">Área de Finanzas</h2>
-      </div>
-      <p>Actualmente no hay solicitudes por aprobar.</p>
-    </div>
-  </main>
+<h1 class="display-5">Finanzas</h1>
+<h2 class="h5 mt-4">
+  Bienvenido al sistema de comisiones
+</h2>
