--- a/Frontend/src/app/finances/department-index/department-index.component.html
+++ b/Frontend/src/app/finances/department-index/department-index.component.html
@@ -1,14 +1,20 @@
 <h1 class="display-5">Departamentos</h1>
 <div class="mt-4 row">
-  <div *ngFor="let department of departments" class="card me-4 mb-4" style="width: 14rem">
+  <div
+    *ngFor="let department of departments"
+    class="card me-4 mb-4"
+    style="width: 22rem"
+  >
     <div class="card-body">
-      <h5 class="card-title">Departamento de {{department.departmentDescription}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <h5 class="card-title">
+        Departamento de {{ department.departmentDescription }}
+      </h5>
       <p class="card-text">
-        Descripción del departamento
+        Presupuesto para viáticos: ${{ department.budgetViatic | number: "1.2"}} MXN
       </p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+    
+      <p class="card-text">Presupuesto para transportes: ${{ department.budgetTransport | number: "1.2"}} MXN</p>
+      <a href="/finances/{{department.departmentDescription}}/commissions" class="card-link">Ver solicitudes</a>
     </div>
   </div>
 </div>
