Vista facturas agregada

--- a/Frontend/src/app/employees/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/employees/commissions-index/commissions-index.component.html
@@ -23,7 +23,7 @@
               <th scope="col">Fecha de termino de la comisión</th>
               <th scope="col">Estado de la comisión</th>
               <th scope="col">Monto depositado</th>
-              <th scope="col">Comprobantes</th>
+              <th scope="col">Detalles</th>
             </tr>
           </thead>
           <tbody>
