--- a/Frontend/src/app/employees/commission-info/commission-info.component.html
+++ b/Frontend/src/app/employees/commission-info/commission-info.component.html
@@ -1,10 +1,7 @@
 <h1 class="display-5">Detalles de la comisión</h1>
-<div class="mt-4">
-  <a
-    href="/finances/{{ commission?.employee[0].department }}/commissions"
-    type="button"
-    class="btn btn-outline-red"
-  >
+<p *ngIf="!commission">No se puede acceder al recurso</p>
+<div *ngIf="commission" class="mt-4">
+  <a href="/employees/commissions" type="button" class="btn btn-outline-red">
     Regresar
   </a>
   <div class="card mt-4 mb-4">
@@ -24,20 +21,6 @@
           <div class="ms-2 me-auto">
             <div class="fw-bold">Tipo de la Comisión</div>
             {{ commission?.typeCommission }}
-          </div>
-        </li>
-        <li
-          class="
-            list-group-item
-            d-flex
-            justify-content-between
-            align-items-start
-          "
-        >
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">Empleados asignados</div>
-            {{ commission?.employee[0].name }}
-            {{ commission?.employee[0].lastName }}
           </div>
         </li>
         <li
@@ -106,27 +89,9 @@
           </div>
         </li>
       </ol>
-      <div
-        *ngIf="commission != null && commission?.isApprovedByFinances === null"
-        class="col-12 mb-2 mt-4 text-center"
-      >
-        <button
-          (click)="approveCommission()"
-          type="submit"
-          class="btn btn-primary me-3"
-        >
-          Aprobar comisión
-        </button>
-        <button
-          (click)="dissapproveCommission()"
-          type="submit"
-          class="btn btn-danger"
-        >
-          Rechazar comisión
-        </button>
-      </div>
     </div>
   </div>
 </div>
-<app-facture-index *ngIf="commission?.isApprovedByFinances && commission.isApprovedByManager">
-</app-facture-index>
+<router-outlet
+  *ngIf="commission?.isApprovedByFinances && commission.isApprovedByManager"
+></router-outlet>
